local view render problem #37414

Closed
opened 2013-11-12 20:09:52 +01:00 by pratik solanki · 8 comments

%%%
add 3 cubes and select one and go to the local view/isolate by pressing " / "

and hit render you will get all 3 cubes instade of 1

this is actully a bug and it effects a much more in bigger projects ...... i m submitting this 2nd time ....

%%%

%%% add 3 cubes and select one and go to the local view/isolate by pressing " / " and hit render you will get all 3 cubes instade of 1 this is actully a bug and it effects a much more in bigger projects ...... i m submitting this 2nd time .... %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%To elaborate, in previous versions you could go into local view for some objects, then when the mouse is over that view and you hit F12, it'll render just those objects (including lights) - this was an intentional feature of course.

This is no longer possible in 2.69 - I don't know if it was purposefully removed or not, but it's definitely confirmed anyway :)%%%

%%%To elaborate, in previous versions you could go into local view for some objects, then when the mouse is over that view and you hit F12, it'll render just those objects (including lights) - this was an intentional feature of course. This is no longer possible in 2.69 - I don't know if it was purposefully removed or not, but it's definitely confirmed anyway :)%%%

%%%I did closed previous bug [#37367]… I was not aware that what you describe, Greg, was ever possible. Or maybe it has been replaced by the “render in viewport” feature, which does take into account Local View?

Assigning to Brecht, our render Master! :)%%%

%%%I did closed previous bug [#37367]… I was not aware that what you describe, Greg, was ever possible. Or maybe it has been replaced by the “render in viewport” feature, which does take into account Local View? Assigning to Brecht, our render Master! :)%%%

This issue was referenced by blender/blender-addons-contrib@29790d4fca

This issue was referenced by blender/blender-addons-contrib@29790d4fcad95ec31c801631c699547673bf7fab

This issue was referenced by 29790d4fca

This issue was referenced by 29790d4fcad95ec31c801631c699547673bf7fab

Fixed now, thanks for the report.

Fixed now, thanks for the report.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 29790d4fca.

Closed by commit 29790d4fca.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37414
No description provided.