Fix T37414: local view not taken into account for blender internal F12 render over 3D view.